Changed: Set maximum bounds on the Plann3d table to prevent content bleeding.

--- a/css/plann3dStyles.css
+++ b/css/plann3dStyles.css
@@ -468,6 +468,10 @@ input:not(input[type=submit]), textarea {
     opacity: 0.0;
 }
 
+#plann3dTable {
+    max-width: 100vw;
+}
+
 #plann3dTable .auxTableElems {
     display: block;
     width: 1196px;
